add save by prepared statement and unnest

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,9 @@
 batch_insertion.batch_size=5
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 spring.datasource.url=jdbc:tc:postgresql:14.6-alpine:///test?user=postgres&password=postgres&currentSchema=test_insertion
+#spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?stringtype=unspecified
+#spring.datasource.username=${POSTGRES_USER_NAME}
+#spring.datasource.password=${POSTGRES_PASSWORD}
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.jdbc.batch_size=${batch_insertion.batch_size}
 #spring.datasource.hikari.maximum-pool-size=100
